# chatbot

./: README.md  pyproject.toml
app/: Makefile  db.py  main.py  schemas.py  text.py
app/sql_scripts/: add_data.sql  create_barber.sql  create_client.sql  read_data.sql
create_table/: record  service_record  sql_scripts
sql_scripts/: add_data.sql  create_client.sql  create_service.sql  delete_data.sql  read_data.sql  update_data.sql
