[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["apsatarovd <dapsatarov@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pytelegrambotapi = "^4.22.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
